crates/pg_syntax/tests/snapshots/postgres_regress/vacuum_parallel@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT count(*) as trigger_parallel_vacuum_nindexes\nFROM pg_class\nWHERE oid in ('regular_sized_index'::regclass, 'typically_sized_index'::regclass) AND\n  pg_relation_size(oid) >=\n  pg_size_bytes(current_setting('min_parallel_index_scan_size'));"
---
SelectStmt@0..244
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    FuncCall@7..14
      Ident@7..12 "count"
      Ascii40@12..13 "("
      Ascii42@13..14 "*"
    Ascii41@14..15 ")"
    Whitespace@15..16 " "
    As@16..18 "as"
    Whitespace@18..19 " "
    Ident@19..51 "trigger_parallel_vacu ..."
  Newline@51..52 "\n"
  From@52..56 "FROM"
  Whitespace@56..57 " "
  RangeVar@57..65
    Ident@57..65 "pg_class"
  Newline@65..66 "\n"
  Where@66..71 "WHERE"
  Whitespace@71..72 " "
  BoolExpr@72..241
    AExpr@72..146
      ColumnRef@72..75
        Ident@72..75 "oid"
      Whitespace@75..76 " "
      InP@76..78 "in"
      Whitespace@78..79 " "
      Ascii40@79..80 "("
      List@80..146
        TypeCast@80..111
          AConst@80..101
            Sconst@80..101 "'regular_sized_index'"
          Typecast@101..103 "::"
          TypeName@103..111
            Ident@103..111 "regclass"
        Ascii44@111..112 ","
        Whitespace@112..113 " "
        TypeCast@113..146
          AConst@113..136
            Sconst@113..136 "'typically_sized_index'"
          Typecast@136..138 "::"
          TypeName@138..146
            Ident@138..146 "regclass"
    Ascii41@146..147 ")"
    Whitespace@147..148 " "
    And@148..151 "AND"
    Newline@151..152 "\n"
    Whitespace@152..154 "  "
    AExpr@154..241
      FuncCall@154..174
        Ident@154..170 "pg_relation_size"
        Ascii40@170..171 "("
        ColumnRef@171..174
          Ident@171..174 "oid"
      Ascii41@174..175 ")"
      Whitespace@175..176 " "
      GreaterEquals@176..178 ">="
      Newline@178..179 "\n"
      Whitespace@179..181 "  "
      FuncCall@181..241
        Ident@181..194 "pg_size_bytes"
        Ascii40@194..195 "("
        FuncCall@195..241
          Ident@195..210 "current_setting"
          Ascii40@210..211 "("
          AConst@211..241
            Sconst@211..241 "'min_parallel_index_s ..."
  Ascii41@241..242 ")"
  Ascii41@242..243 ")"
  Ascii59@243..244 ";"

