crates/pg_syntax/tests/snapshots/postgres_regress/varchar@16.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT c.*\n   FROM VARCHAR_TBL c\n   WHERE c.f1 >= 'a';"
---
SelectStmt@0..54
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..8 "c"
      Ascii46@8..9 "."
      AStar@9..10
        Ascii42@9..10 "*"
  Newline@10..11 "\n"
  Whitespace@11..14 "   "
  From@14..18 "FROM"
  Whitespace@18..19 " "
  RangeVar@19..32
    Ident@19..30 "VARCHAR_TBL"
    Whitespace@30..31 " "
    Alias@31..32
      Ident@31..32 "c"
  Newline@32..33 "\n"
  Whitespace@33..36 "   "
  Where@36..41 "WHERE"
  Whitespace@41..42 " "
  AExpr@42..53
    ColumnRef@42..46
      Ident@42..43 "c"
      Ascii46@43..44 "."
      Ident@44..46 "f1"
    Whitespace@46..47 " "
    GreaterEquals@47..49 ">="
    Whitespace@49..50 " "
    AConst@50..53
      Sconst@50..53 "'a'"
  Ascii59@53..54 ";"

