crates/pg_syntax/tests/snapshots/postgres_regress/varchar@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO VARCHAR_TBL (f1) VALUES ('3');"
---
InsertStmt@0..42
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "VARCHAR_TBL"
  Whitespace@23..24 " "
  Ascii40@24..25 "("
  ResTarget@25..27
    Ident@25..27 "f1"
  Ascii41@27..28 ")"
  Whitespace@28..29 " "
  SelectStmt@29..40
    Values@29..35 "VALUES"
    Whitespace@35..36 " "
    Ascii40@36..37 "("
    List@37..40
      AConst@37..40
        Sconst@37..40 "'3'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

